# practicum_livecoding

./: .gitignore  README.md  pyproject.toml  requirements.txt
algorithms/: lesson.md  todo_list.py
integrations/: bones.md  customer.py  gibdd_events.py  gibdd_proxy.py  sender.py
parsing/: example.json  example.xml  html_parser.py  json_parser.py  lesson.md  models.py  xml_parser.py
sprint_4_testing/: TestPlan.md  calc.py  naive_calc.py
sprint_4_testing/tests/: test_calc.py  test_input.py
testing/: README.md
testing/tests/: test_calc.py  test_input.py
