[tool.poetry]
name = "practicum"
version = "0.1.0"
description = ""
authors = ["kireev <kireev_y@tochka.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
requests = "^2.31.0"
pytest = "^7.4.3"
black = "^23.10.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
